changed js from innerHTML to textContent and added overflow CSS to prevent long passwords from spilling out of card body

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -45,6 +45,8 @@ header {
   margin-top: 20px;
   max-width: 800px;
   padding: 30px 40px;
+  overflow:hidden;
+  line-height: 150%;
 }
 
 .card-header::after {
